--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "body-parser": "^1.20.0",
     "core-js": "^3.6.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
