--- a/package.json
+++ b/package.json
@@ -6,23 +6,28 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "backend": "ts-node ./backend/index.ts"
+    "backend": "ts-node --project ./node.tsconfig.json ./backend/index.ts"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "roboto-fontface": "*",
     "vue": "^3.0.0",
+    "vue-router": "4",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^17.0.33",
+    "@types/vue-router": "^2.0.0",
     "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -38,8 +43,9 @@
     "sass-loader": "^10.0.0",
     "ts-node": "^10.7.0",
     "typescript": "~4.1.5",
-    "vue-cli-plugin-vuetify": "~2.4.8",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "vue-cli-plugin-vuetify": "~2.5.0",
+    "vuetify-loader": "^2.0.0-alpha.0",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "_id": "ironman@0.1.0",
   "readme": "ERROR: No README data found!"
