--- a/package.json
+++ b/package.json
@@ -11,42 +11,32 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^0.27.2",
-    "body-parser": "^1.20.0",
-    "core-js": "^3.6.5",
+    "core-js": "^3.8.3",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
     "express-session": "^1.17.3",
     "roboto-fontface": "*",
-    "vue": "^3.0.0",
-    "vue-router": "4",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
-    "@types/node": "^17.0.33",
-    "@types/vue-router": "^2.0.0",
     "@types/webfontloader": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-plugin-typescript": "~4.5.13",
-    "@vue/cli-service": "~4.5.13",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "sass": "^1.38.0",
-    "sass-loader": "^10.0.0",
-    "ts-node": "^10.7.0",
-    "typescript": "~4.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "ts-node": "^10.8.0",
+    "typescript": "~4.5.5",
     "vue-cli-plugin-vuetify": "~2.5.0",
-    "vuetify-loader": "^2.0.0-alpha.0",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
-  },
-  "_id": "ironman@0.1.0",
-  "readme": "ERROR: No README data found!"
+  }
 }
