--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^0.27.2",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "express-session": "^1.17.3",
