--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
