--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
+    "luxon": "^2.4.0",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express-session": "^1.17.4",
+    "@types/luxon": "^2.3.2",
     "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
