--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8080",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "backend": "ts-node --project ./node.tsconfig.json ./backend/index.ts"
+    "backend": "DEBUG=ironman:* ts-node --project ./node.tsconfig.json ./backend/index.ts"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
@@ -14,6 +14,7 @@
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
     "luxon": "^2.4.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/debug": "^4.1.7",
     "@types/express-session": "^1.17.4",
     "@types/luxon": "^2.3.2",
     "@types/webfontloader": "^1.0.0",
