--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
-    "luxon": "^2.4.0",
+    "luxon": "^3.1.0",
     "memorystore": "^1.6.7",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
@@ -44,7 +44,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "ts-node": "^10.8.0",
     "typescript": "~4.5.5",
-    "vue-cli-plugin-vuetify": "~2.5.0",
-    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "webpack-plugin-vuetify": "^2.0.0"
   }
 }
