--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "discord.js": "^14.6.0",
     "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
     "luxon": "^3.1.0",
