--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "discord.js": "^14.6.0",
     "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
-    "luxon": "^2.4.0",
+    "luxon": "^3.1.0",
     "memorystore": "^1.6.7",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.0.1",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
@@ -44,7 +45,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "ts-node": "^10.8.0",
     "typescript": "~4.5.5",
-    "vue-cli-plugin-vuetify": "~2.5.0",
-    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "webpack-plugin-vuetify": "^2.0.0"
   }
 }
