--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "luxon": "^3.1.0",
     "memorystore": "^1.6.7",
     "roboto-fontface": "*",
+    "sqlite3": "^5.1.4",
+    "typeorm": "^0.3.11",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.5",
